--- a/components/ListAdvantages/ListAdvantages.module.css
+++ b/components/ListAdvantages/ListAdvantages.module.css
@@ -8,3 +8,14 @@
 	flex-direction: column;
 	gap: 50px;
 }
+
+@media screen and (max-width: 960px) {
+	.advantages {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+@media screen and (max-width: 960px) {
+	.advantages {
+		grid-template-columns: 1fr;
+	}
+}
