--- a/components/ListStores/CardStore/CardStore.module.css
+++ b/components/ListStores/CardStore/CardStore.module.css
@@ -10,3 +10,9 @@
 	border: 1px solid var(--border-color);
 	background-color: var(--card-BG-color);
 }
+@media screen and (max-width: 760px) {
+	.card {
+		text-align: center;
+		padding: 1rem 2rem;
+	}
+}
