--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -29,3 +29,31 @@
 	padding: 10px;
 	border-radius: 5px;
 }
+
+@media screen and (max-width: 1000px) {
+	.text {
+		max-width: 60%;
+	}
+}
+@media screen and (max-width: 760px) {
+	.banner {
+		flex-direction: column;
+		gap: 40px;
+		padding: 2rem 1rem;
+	}
+	.text {
+		max-width: 100%;
+		text-align: center;
+	}
+}
+@media screen and (max-width: 500px) {
+	.href_wrap,
+	.href {
+		text-align: center;
+		width: 100%;
+		display: block;
+	}
+	.href {
+		padding: 1rem 0.5rem;
+	}
+}
