--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -7,11 +7,13 @@
 	padding-top: 60px;
 	color: var(--text-color);
 	padding-bottom: 60px;
+	gap: 20px;
 }
 
 .menu {
 	display: flex;
 	gap: 100px;
+	flex-wrap: wrap;
 }
 
 .columnFooter {
@@ -30,4 +32,23 @@
 }
 .footerLink:hover {
 	color: var(--white-color);
+}
+
+@media screen and (max-width: 780px) {
+	.columnFooter {
+		min-width: 200px;
+	}
+}
+@media screen and (max-width: 700px) {
+	.footer {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	.menu {
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		gap: 40px;
+	}
 }
