--- a/components/HowItWorksList/HowItWorksList.module.css
+++ b/components/HowItWorksList/HowItWorksList.module.css
@@ -22,3 +22,14 @@
 	flex-direction: column;
 	gap: 15px;
 }
+
+@media screen and (max-width: 1100px) {
+	.wrapper {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+@media screen and (max-width: 600px) {
+	.wrapper {
+		grid-template-columns: 1fr;
+	}
+}
