--- a/components/ServicesList/ServicesList.module.css
+++ b/components/ServicesList/ServicesList.module.css
@@ -12,3 +12,11 @@
 	flex-direction: column;
 	gap: 15px;
 }
+
+@media screen and (max-width: 880px) {
+	.wrapper {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+}
