--- a/components/ReviewList/ReviewList.module.css
+++ b/components/ReviewList/ReviewList.module.css
@@ -15,3 +15,19 @@
 	flex-direction: column;
 	gap: 15px;
 }
+
+@media screen and (max-width: 1100px) {
+	.review__list {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+@media screen and (max-width: 820px) {
+	.review__list {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+@media screen and (max-width: 610px) {
+	.review__list {
+		grid-template-columns: 1fr;
+	}
+}
